[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
bevy = { version = "0.16", default-features = false }
linearize = "0.1"
strum = "0.27"
serde = "1"
tracing = "0.1"
criterion = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"

[workspace.lints.clippy]
nursery = "warn"
