[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
ahash = "0.8.11"
bevy = { version = "0.17", default-features = false }
config = { version = "0.15", default-features = false, features = ["yaml"] }
criterion = "0.7"
linearize = "0.1.1"
serde = "1.0.228"
strum = "0.27"
tracing = "0.1.40"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.profiling]
inherits = "release"
debug = "line-tables-only"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
