[package]
name = "infinigen-common"
version = "0.0.0"
edition = "2024"
publish = false

[[bench]]
harness = false
name = "benchmark"

[dependencies]
ahash = { workspace = true }
block-mesh = { git = "https://github.com/bonsairobo/block-mesh-rs", rev = "793c53e82c12b3f7e9502006664c6e81f8b1c78a" }
linearize = { workspace = true, features = ["derive"] }
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
ndarray = { version = "0.16", default-features = false, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.9"

[lints]
workspace = true
