[package]
name = "infinigen-common"
version = "0.1.0-dev"
edition = "2024"
publish = false

[[bench]]
harness = false
name = "benchmark"

[dependencies]
ahash = { workspace = true }
glam = { workspace = true }
linearize = { workspace = true, features = ["derive"] }
ndarray = { version = "0.17", default-features = false, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
