[package]
name = "infinigen-extras"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
ahash = { workspace = true }
bevy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
strum = { workspace = true, features = ["derive"] }

infinigen-common = { path = "../common" }
infinigen-plugins = { path = "../plugins" }

noise = "0.9.0"
splines = "4.4.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
