[package]
name = "infinigen-extras"
version = "0.1.0-dev"
edition = "2024"
publish = false

[[bench]]
harness = false
name = "benchmark"

[dependencies]
ahash = { workspace = true }
bevy = { workspace = true }
infinigen-common = { path = "../common" }
infinigen-plugins = { path = "../plugins" }
noise = "0.9"
serde = { workspace = true, features = ["derive"] }
splines = "5"
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true
