[package]
name = "infinigen"
version = "0.0.0"
edition = "2024"
publish = false
default-run = "infinigen"

[dependencies]
bevy = { workspace = true, features = ["bevy_winit", "x11", "wayland"] }

infinigen-plugins = { path = "../plugins" }
infinigen-extras = { path = "../extras" }

bevy_framepace = { version = "0.20", git = "https://github.com/janhohenheim/bevy_framepace", rev = "5bd34b3b576c6383f9534e3ccc366b6b72fbce10", default-features = false }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }

[target.'cfg(all(not(target_env = "msvc"), not(target_family = "wasm")))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
remote = ["bevy/bevy_remote"]
jemalloc = ["dep:tikv-jemallocator"]

[lints]
workspace = true
