[package]
name = "infinigen"
version = "0.1.0-dev"
edition = "2024"
publish = false
default-run = "infinigen"

[dependencies]
bevy = { workspace = true, features = ["bevy_winit", "wayland", "x11"] }
bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace", rev = "9be8f16210c341550e0593d57d12e54e7c9c1ee5", version = "0.21" }
clap = { version = "4", features = ["derive"] }
config = { workspace = true }
infinigen-extras = { path = "../extras" }
infinigen-plugins = { path = "../plugins" }

[target.'cfg(all(not(target_env = "msvc"), not(target_family = "wasm")))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
jemalloc = ["dep:tikv-jemallocator"]
remote = ["bevy/bevy_remote"]

[lints]
workspace = true
