[package]
name = "infinigen-plugins"
version = "0.1.0-dev"
edition = "2024"
publish = false

[dependencies]
ahash = { workspace = true }
anyhow = "1.0.100"
bevy = { workspace = true, features = [
  "bevy_anti_alias",
  "bevy_asset",
  "bevy_light",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_picking",  # for bevy-inspector-egui
  "bevy_post_process",
  "bevy_state",
  "bevy_window",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "tonemapping_luts",
] }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader.git", rev = "430fbbe0a0208090a4a94d7037595958c50c3383", default-features = false }
bevy_common_assets = { version = "0.14", default-features = false, features = [
  "ron",
] }
bevy-inspector-egui = { version = "0.35" }
infinigen-common = { path = "../common" }
leafwing-input-manager = { version = "0.18", default-features = false, features = [
  "keyboard",
  "mouse",
] }
linearize = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
config = { workspace = true }

[lints]
workspace = true
