[package]
name = "infinigen-plugins"
version = "0.1.0-dev"
edition = "2024"
publish = false

[dependencies]
ahash = { workspace = true }
anyhow = "1.0.102"
bevy = { workspace = true, features = [
  "3d",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "tonemapping_luts",
] }
bevy_asset_loader = { version = "0.26", default-features = false }
bevy_common_assets = { version = "0.16", default-features = false, features = [
  "ron",
] }
bevy-inspector-egui = { version = "0.36" }
infinigen-common = { path = "../common" }
leafwing-input-manager = { version = "0.20", default-features = false, features = [
  "keyboard",
  "mouse",
] }
linearize = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
config = { workspace = true }

[lints]
workspace = true
